<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.cosmos.unreddit.view.CradleView
        android:id="@+id/loading_cradle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.cosmos.unreddit.view.InfoBarView
        android:id="@+id/info_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/info_bar_margin_top"
        style="@style/InfoBarStyle"
        app:textMessage="@string/network_retry_message"
        app:textAction="@string/network_retry_action"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/empty_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_empty_data"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/empty"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_empty_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empty_data"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/empty_data"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>